homework3/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customservice
  labels:
    app: customservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: customservice
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: customservice
    spec:
      containers:
        - name: customservice
          image: alyanovao/customservice:1.0.1
          ports:
            - containerPort: 8000
            - containerPort: 8001
