homework3/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customservice
spec:
  ingressClassName: nginx
  rules:
    - host:
    - http:
        paths:
          - path: /monitor
            pathType: Prefix
            backend:
              service:
                name: customservice
                port:
                  number: 8000
          - path: /customService
            pathType: Prefix
            backend:
              service:
                name: customservice
                port:
                  number: 8001
