homework3/manifest/ingressRoute.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customserviceroute
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "http://arch.homework:80/customService/hello"
spec:
  ingressClassName: nginx
  rules:
    - host:
    - http:
        paths:
          - path: /otusapp
            pathType: Prefix
            backend:
              service:
                name: customservice
                port:
                  number: 8001
